# workflow-orchestration-queue-bravo74

./: .ai-repository-summary.md  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.agents/skills/orchestration-run-analysis/: SKILL.md
.devcontainer/: devcontainer.json
.github/workflows/: orchestrator-agent.yml
debrief-and-document/: debrief-report.md
docs/: implementation-plan.md  new_features.md  pr-approval-merge-plan.md  prompt-refactor-analysis.md
docs/validation/: VALIDATION_REPORT_init-existing-repository_20260326.md
plan_docs/: OS-APOW Architecture Guide v3.2.md  OS-APOW Development Plan v4.2.md  OS-APOW Implementation Specification v1.2.md  architecture.md  interactive-report.html  tech-stack.md  verification-0.1-template-cloning-plan-seeding.md  verification-0.2-project-setup-execution.md  workflow-plan.md
src/: __init__.py  notifier_service.py  orchestrator_sentinel.py
src/models/: __init__.py  github_events.py  work_item.py
src/queue/: __init__.py  github_queue.py  interfaces.py
test/: test-opencode-run.sh
